components/bookinfo/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo
spec:
  parentRefs:
  - name: bookinfo
  hostnames:
  - "bookinfo.global.${PLATFORM_BASE_DOMAIN}"
  rules:
  - matches:
    - path:
        type: Exact
        value: /productpage
    - path:
        type: PathPrefix
        value: /static 
    - path:
        type: Exact
        value: /login 
    - path:
        type: Exact
        value: /logout 
    - path:
        type: PathPrefix
        value: /api/v1/products                                 
  - backendRefs:
    - name: productpage
      port: 9080
